Added Collaborator Docs + Quickstart Code Sample (#18)
* Added todo

* Plans for the branch

* Started scaffolding fund roles

* Clarified daf manager and primary advisor

* Collaborators improvements

* Changes

* Docs

* Improved section

* Checkpoint

* Checkpoint

* done

* Done

* Prettier and adding collaborator

* Adding the settings that matter

* Improved docs

* Dev secret - don't care about it leaking

* Prettified code

* Environment variable

* Added wealth advisor id

* Improved example

* Fixed a bunch of stuff

* Added input to the form

* fixes

* Done

* Added dropdown

* Fixed

* Fix

* Step by step instructions

* Polish

* Collaborator docs

* Now MD Removed

* Todo removed

* Moved files

--- a/quickstart/backend/.env.example
+++ b/quickstart/backend/.env.example
@@ -3,8 +3,15 @@ ENDAOMENT_CLIENT_SECRET=your_client_secret
 ENDAOMENT_REDIRECT_URI=http://localhost:5454
 ENDAOMENT_ENVIRONMENT=development
 
-# The port that the backend server will run on
-# PORT=5454
-
 # The URL of the frontend server
 FRONTEND_URL=http://localhost:3000
+
+# Only needed if you want to test Collaborators flow 
+ENDAOMENT_API_KEY=your_api_key
+
+# Only needed if you want to test Collaborators flow 
+ENDAOMENT_WEALTH_ADVISOR_ID='abf40e40-4dc7-4d08-aa0a-f35f1e129b7d'
+
+
+# The port that the backend server will run on
+# PORT=5454
